--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
                     <footer className="mt-20 py-10 text-center text-slate-400 text-sm border-t border-slate-200 max-w-4xl mx-auto px-6">
                         <p className="font-bold text-slate-500 mb-2">AI Ethics & Academic Integrity</p>
-                        <p>© 2024 학업 윤리 준수 위원회</p>
+                        <p>© 2026 군산대학교 AIX-Boost</p>
                     </footer>
                 </div>
             );
